--- a/Blazor/Shared/NavMenu.razor
+++ b/Blazor/Shared/NavMenu.razor
@@ -15,15 +15,20 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="CreateStudent">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Create Student
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="CreateGrade">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Create Grade
             </NavLink>
-        </div>
+        </div>    
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ViewStatistics">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> View Statistics
+            </NavLink>
+        </div>           
     </nav>
 </div>
 
